--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_alta"
-        android:name="com.example.recum6.ui.alta.AltaFragment"
+        android:name="com.example.recum6.ui.alta.AltaBajaFragment"
         android:label="Alta"
         tools:layout="@layout/fragment_alta" />
 
