--- a/app/src/main/res/layout/fragment_modificacio.xml
+++ b/app/src/main/res/layout/fragment_modificacio.xml
@@ -134,12 +134,25 @@
         app:srcCompat="@android:color/background_dark" />
 
     <TextView
-        android:id="@+id/consultaTextView"
+        android:id="@+id/consultaNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="25dp"
+        android:visibility="invisible"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/consultaButton" />
+
+    <TextView
+        android:id="@+id/consultaCIF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:visibility="invisible"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/consultaNombre" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
